Fetches discogs data successfully

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@feathersjs/socketio": "^5.0.6",
     "@feathersjs/transport-commons": "^5.0.6",
     "@feathersjs/typebox": "^5.0.6",
+    "dotenv": "^16.3.1",
     "knex": "^2.4.2",
+    "node-fetch": "^3.3.1",
     "pg": "^8.11.0",
     "winston": "^3.9.0"
   },
