--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "rootDir": "./src",
     "declaration": true,
     "strict": true,
-    "esModuleInterop": true,
-    "sourceMap": true
+    "esModuleInterop": true
   },
   "include": [
     "src"
