--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "knex": "^2.4.2",
     "node-fetch": "^3.3.1",
     "pg": "^8.11.0",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@feathersjs/cli": "^5.0.6",
