--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "groovebase-api",
   "description": "groovebase music app API",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "homepage": "",
   "private": true,
   "keywords": [
     "feathers"
   ],
-  "author": {},
   "contributors": [],
   "bugs": {},
   "engines": {
@@ -47,39 +46,37 @@
     "migrate:make": "knex migrate:make"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^5.0.6",
-    "@feathersjs/authentication": "^5.0.6",
-    "@feathersjs/authentication-client": "^5.0.6",
-    "@feathersjs/authentication-local": "^5.0.6",
-    "@feathersjs/authentication-oauth": "^5.0.6",
-    "@feathersjs/configuration": "^5.0.6",
-    "@feathersjs/errors": "^5.0.6",
-    "@feathersjs/feathers": "^5.0.6",
-    "@feathersjs/knex": "^5.0.6",
-    "@feathersjs/koa": "^5.0.6",
-    "@feathersjs/schema": "^5.0.6",
-    "@feathersjs/socketio": "^5.0.6",
-    "@feathersjs/transport-commons": "^5.0.6",
-    "@feathersjs/typebox": "^5.0.6",
+    "@feathersjs/adapter-commons": "^5.0.23",
+    "@feathersjs/authentication": "^5.0.23",
+    "@feathersjs/authentication-client": "^5.0.23",
+    "@feathersjs/authentication-local": "^5.0.23",
+    "@feathersjs/authentication-oauth": "^5.0.23",
+    "@feathersjs/configuration": "^5.0.23",
+    "@feathersjs/errors": "^5.0.23",
+    "@feathersjs/feathers": "^5.0.23",
+    "@feathersjs/knex": "^5.0.23",
+    "@feathersjs/koa": "^5.0.23",
+    "@feathersjs/schema": "^5.0.23",
+    "@feathersjs/socketio": "^5.0.23",
+    "@feathersjs/transport-commons": "^5.0.23",
+    "@feathersjs/typebox": "^5.0.23",
     "dotenv": "^16.3.1",
-    "knex": "^2.4.2",
-    "node-fetch": "^3.3.1",
-    "pg": "^8.11.0",
-    "winston": "^3.9.0",
-    "yup": "^1.3.2"
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
-    "@feathersjs/cli": "^5.0.6",
-    "@feathersjs/rest-client": "^5.0.6",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
-    "axios": "^1.4.0",
+    "@feathersjs/cli": "^5.0.11",
+    "@feathersjs/rest-client": "^5.0.23",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.25",
+    "axios": "^1.6.7",
     "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "shx": "^0.3.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
